<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DespesaFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/lbl_nova_despesa"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/title_nova_despesa"
                android:textAlignment="center"
                android:textSize="18dp"
                android:background="@color/colorFail"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorWhite"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/lbl_categoria_despesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lbl_nova_despesa"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp"
                android:text="@string/lbl_categoria"
                />

            <Spinner
                android:id="@+id/spinner_category_despesa"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/lbl_categoria_despesa"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:entries="@array/categorias"
                android:background="@drawable/edt_background"
                />

            <TextView
                android:id="@+id/lbl_description_despesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/spinner_category_despesa"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp"
                android:text="@string/lbl_descricao"
                />

            <EditText
                android:id="@+id/edt_description_despesa"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/lbl_description_despesa"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:inputType="textCapSentences"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:background="@drawable/edt_background"
                />

            <TextView
                android:id="@+id/lbl_value_despesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/edt_description_despesa"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp"
                android:inputType="textAutoComplete"
                android:text="@string/lbl_valor"
                />

            <EditText
                android:id="@+id/edt_value_despesa"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toBottomOf="@id/lbl_value_despesa"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="6dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:inputType="numberDecimal"
                android:background="@drawable/edt_background"
                />

            <Button
                android:id="@+id/btn_salvar_despesa"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toBottomOf="@id/edt_value_despesa"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:text="Salvar"
                android:textSize="18dp"
                android:textColor="@color/colorSuccess"
                android:background="@drawable/btn_background_success"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>